--- a/scripts/setup/install
+++ b/scripts/setup/install
@@ -2,8 +2,7 @@
 
 set -e
 
-COMPOSER_VERSION=1.10.13
-ADMINER_VERSION=4.7.7
+COMPOSER_VERSION=2.0.11
 
 clog -i "PHP: Build process starts ..."
 
@@ -11,7 +10,7 @@ clog -i "PHP: Build process starts ..."
 lcs-cli schema add --section php
 
 # setup nginx
-cp -f /scripts/setup/nginx/default.conf /etc/nginx/conf.d/default.conf
+cp -f /scripts/setup/nginx/default.conf /etc/nginx/http.d/default.conf
 # php.ini template should be copied in runonce_php in order
 # to avoid child image building process using php-cli
 # config php with our template
@@ -29,12 +28,8 @@ clog -i "PHP: Configuration templates for nginx, php, php-fpm copied."
 # install composer
 curl -LfsS https://getcomposer.org/download/${COMPOSER_VERSION}/composer.phar -o /usr/local/bin/composer
 chmod +x /usr/local/bin/composer
-composer config -g
 composer config -g repo.packagist composer https://packagist.phpcomposer.com
 clog -i "PHP: Composer installed and configured to use China's repos."
-# install adminer
-curl -LfsS https://github.com/vrana/adminer/releases/download/v${ADMINER_VERSION}/adminer-${ADMINER_VERSION}.php -o ${APP_DIR}/adminer.php
-clog -i "PHP: Composer, PhpUnit and Adminer installed."
 
 # php-fpm supervisor config
 cat > /etc/supervisor.conf.d/php-fpm.conf <<EOF
